# BioWallet

./: .gitignore  README.md  pyproject.toml
app/: Dockerfile  docker-compose.yml
app/backend/: .dockerignore  Dockerfile  pyproject.toml
app/backend/src/flask_docker/: __init__.py  app.py
app/backend/src/flask_docker/controllers/: __init__.py  user_controller.py
app/backend/src/flask_docker/dao/: user_dao.py
app/backend/src/flask_docker/services/: user_service.py
app/backend/src/flask_docker/util/: crypto.py  jwt_util.py  recognition.py
app/frontend/: .dockerignore  package-lock.json  package.json
verification/: benchmark.py  create_similarity_matrix.py  image_qualities_eval.py  plot.py  recognition.py  utils.py
verification/BenchmarkResult/: Test.csv  benchmark_0-100_DeepID_retinaface_Aligned_AT_T.csv  benchmark_0-100_DeepID_retinaface_Aligned_MyDataset.csv  benchmark_0-100_Dlib_retinaface_Aligned_AT.csv  benchmark_0-100_Dlib_retinaface_Aligned_MyDataset.csv  benchmark_0-100_Facenet512_retinaface_Aligned_AT_T.csv  benchmark_0-100_Facenet512_retinaface_Aligned_MyDataset.csv  benchmark_100-0_DeepID_retinaface_Aligned_AT_T.csv  benchmark_100-0_DeepID_retinaface_Aligned_MyDataset.csv  benchmark_100-0_Dlib_retinaface_Aligned_AT.csv  benchmark_100-0_Dlib_retinaface_Aligned_MyDataset.csv  benchmark_100-0_Facenet512_retinaface_Aligned_AT_T.csv  benchmark_100-0_Facenet512_retinaface_Aligned_MyDataset.csv  benchmark_30-70_DeepID_retinaface_Aligned_AT_T.csv  benchmark_30-70_DeepID_retinaface_Aligned_MyDataset.csv  benchmark_30-70_Dlib_retinaface_Aligned_AT_.csv  (+15 more)
(+24 files in other folders)
