[project]
name = "BioWallet"
authors = [
    {name = "Pasquale Celani",email = "pasqualecelani01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface (==0.0.93)",
    "tensorflow (==2.16.1)",
    "tf-keras (==2.16)",
    "dlib (==19.24.6)"
]

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
