[project]
name = "flask_docker"
authors = [
    {name = "Pasquale Celani",email = "pasqualecelani01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "Flask (==3.1.0)",
    "flask-cors (==5.0.1)",
    "deepface (==0.0.93)",
    "tensorflow (==2.16.1)",
    "tf-keras (==2.16)",
    "pymongo (==4.11.3)",
    "ecdsa (==0.19.1)",
    "PyJWT (==2.10.1)" 
]

[tool.poetry]
packages = [{include = "flask_docker", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
